--- a/Simulation/Resources/Localizable.strings
+++ b/Simulation/Resources/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 "DashboardViewController.Title" = "Dashboard";
+"DashboardViewController.Button.Okay" = "Okay";
 
 "OnboardingViewController.Slide1.Title" = "Welcome";
 "OnboardingViewController.Slide1.Summary" = "Screen 1";
