--- a/Simulation/Resources/Localizable.strings
+++ b/Simulation/Resources/Localizable.strings
@@ -26,3 +26,5 @@
 "SituationDetailViewController.Section.Input" = "Input";
 
 "PolicyDetailViewController.Section.Output" = "Output";
+
+"SettingsViewController.Title" = "Settings";
